    progress for a while. Regression stemming from non future proof changes
    introduced with the initial triggers implementation in dpkg 1.14.17
    combined with changes in dpkg 1.17.19. Closes: #766242, #766322
  * Make the initial dependtry be 1 instead of 0. This gets rid of an unused
    dependtry step, which got accidentally introduced when the perl dpkg was
    rewritten in C, ages ago.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Simplified Chinese (Zhou Mo).
  * Vietnamese (Trần Ngọc Quân).

 -- Guillem Jover <guillem@debian.org>  Mon, 20 Oct 2014 16:06:38 +0200

dpkg (1.17.19) unstable; urgency=low

  [ Guillem Jover ]
  * Bump the Breaks on devscripts to 2.14.10 due to the new dpkg-architecture
    command-line parsing strictness introduced in 1.17.17. Closes: #764965
  * Create pidfiles even when start-stop-daemon is not asked to background
    the process itself. Although a bit of a dubious usage, because any error
    before executing the program will not be properly reported to the caller.
    Regression introduced in dpkg 1.17.14. Closes: #765110
  * Add new --remove-pidfile option to start-stop-daemon.
  * Mention --pid and --ppid in start-stop-daemon(8) man page DESCRIPTION.
  * Add invoke hooks for dpkg --add-architecture and --remove-architecture.
    Prompted by Helmut Grohne <helmut@subdivi.de>.
  * Reverse --verify-format logic to actually accept 'rpm' as valid.
    Closes: #765907
  * Fix trigger dependency checks and cycle detection.
    Regression introduced in dpkg 1.17.17.
    Closes: #765434, #765668, #765734, #765781, #765789, #765952
  * Rework dependency problem debug and notice output on trigger processing.

  [ Updated programs translations ]
  * Italian (Milo Casagrande): Closes: #765748
  * Turkish (Mert Dirik). Closes: #764942
  * Simplified Chinese (Zhou Mo). Closes: #765693

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]