@@ -9,6 +9,9 @@ dpkg (1.17.20) UNRELEASED; urgency=low
   * Make the initial dependtry be 1 instead of 0. This gets rid of an unused
     dependtry step, which got accidentally introduced when the perl dpkg was
     rewritten in C, ages ago.
+  * Allow detached upstream signatures for upstream orig.tar files in the
+    .dsc file. Suggested by Daniel Kahn Gillmor <dkg@fifthhorseman.net>.
+    Closes: #759478
 
   [ Updated programs translations ]
   * German (Sven Joachim).
